@@ -1,0 +1,58 @@
+/*
+    Structorizer 
+    A little tool which you can use to create Nassi-Schneiderman Diagrams (NSD)
+
+    Copyright (C) 2009  Bob Fisch
+
+    This file is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or any
+    later version.
+
+    This file is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+    This file is part of the "Structorizer" project. Please read the
+    header below to get informed about the contributers of this file.
+
+    ____  ___ ___  ____   ___   ____  ______   ____  ____   ______ 
+   |    ||   |   ||    \ /   \ |    \|      | /    ||    \ |      |
+    |  | | _   _ ||  o  )     ||  D  )      ||  o  ||  _  ||      |
+    |  | |  \_/  ||   _/|  O  ||    /|_|  |_||     ||  |  ||_|  |_|
+    |  | |   |   ||  |  |     ||    \  |  |  |  _  ||  |  |  |  |  
+    |  | |   |   ||  |  |     ||  .  \ |  |  |  |  ||  |  |  |  |  
+   |____||___|___||__|   \___/ |__|\_| |__|  |__|__||__|__|  |__|  
+
+    Please do not edit this file by hand, if you are not absolutely sure about 
+    what you are doing. 
+
+    Please use the build-in tool "Translator" (File -> Translator) to edit your
+    preferred language, then save your work and send it to me (bob@fisch.lu) for
+    integration into the next release.
+*/
+
+/******************************************************************************************************
+ *
+ *      Author:         ?
+ *
+ *      Description:    The ? language file
+ *
+ ******************************************************************************************************
+ *
+ *      Revision List
+ *
+ *      Author          Date            Description
+ *      ------          ----            -----------
+ *      ?		?               ?
+ *
+ ******************************************************************************************************
+ *
+ *      Comment:	
+ *
+ ******************************************************************************************************/
+>>>
