@@ -103,6 +103,10 @@ Version: 3.25 (2016.08.09)
 - 16: Issue #222: Structorizer localization from directly loadable file <*>
 - 16: Issue #224: Workaround for table grids on Look and Feel changes <*>
 - 16: Redesigned localization mechanism [Bob Fisch]
+- 16: Locales: refactored some names to be more consistent [Bob Fisch]
+- 16: Locales: added special case "external" [Bob Fisch]
+- 16: Locales: save & load external loaded to and from the INI file [Bob Fisch]
+- 16: Locales: make the INI file backward compatible [Bob Fisch]
 
 Version: 3.24 (2016.03.14)
 - 01: Bugfix #50 - added return types to signature for function export in Pascal [lhoreman]
